--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/run.js",
   "type": "module",
   "scripts": {
-    "start": "node src/run.js",
+    "start": "node -r dotenv/config src/run.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,7 +16,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^8.1.0",
     "dotenv": "^16.0.0",
+    "fs-extra": "^10.0.1",
     "node-fetch": "^3.2.3"
   }
 }
