--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node -r dotenv/config src/run.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node -r dotenv/config src/scripts/testElastic.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.1.0",
+    "@elastic/elasticsearch-mock": "^2.0.0",
     "dotenv": "^16.0.0",
     "fs-extra": "^10.0.1",
     "node-fetch": "^3.2.3"
